pqrs/IaC/BD/pgadmin/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/part-of: database
spec:
  selector:
    app: pgadmin

  ports:
    - name: http
      port: 80
      targetPort: 8080
